--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
     <div class="navbar">
         <div class="logo">
-            <a href="#">AlonePhilic</a>
+            <a href="#">RhythmusByte</a>
         </div>
         <div class="nav">
             <ul>
